# PegThing-ocaml

./: README.md  dune-project  pegthing.opam  pegthing.opam.locked
lib/: .merlin  colorize.ml  colorize.mli  dune  pegthing.ml  pegthing.mli
test/: .merlin  dune  test_pegthing.ml
