opam-version: "2.0"
name: "PegThing"
version: "0.1"
synopsis: "A simple game"
description: """
A terminal version of the pegthing game
"""
maintainer: "Alex Lopez <alex.lopez.zorzano@gmail.com>"
authors: "Alex Lopez <alex.lopez.zorzano@gmail.com>"
depends: [ "ocaml" "ocamlfind" "dune" "ounit2"]
build: ["dune" "build" "-p" name "-j" jobs]
